--- a/test/manual/template.html
+++ b/test/manual/template.html
@@ -45,6 +45,9 @@
       height: 24px; */
         color: aquamarine;
       }
+      mjstb-panel::part(content-block):hover {
+        background-color: orangered;
+      }
     </style>
   </head>
   <body>
