add way to hide/show toolbar buttons

--- a/test/manual/template.html
+++ b/test/manual/template.html
@@ -90,6 +90,7 @@
         >
           <button onclick="experiments.detachPanel();">detach</button>
           <button onclick="experiments.attachPanel();">attach</button>
+          <button onclick="experiments.doSomething();">do something button</button>
         </div>
       </div>
       <div style="width: 30%; background-color: blueviolet;">
